# sandbox_runner

./: .gitignore  CMakeLists.txt  get_ulimit  run  sample2  sample2.c
bad/: CMakeLists.txt  alloc_100m  alloc_100m.c  double_free.c  fork  fork.c  fork_bomb  fork_bomb.c  hello_world  localtime  open  open.c  pid  pid.c  pthread  pthread.c  sleep  sleep.c  time  time.cpp
good/: CMakeLists.txt  echo.c  sort  sort.cpp
